<resources>
    <string name="notif_channel_name">BeMyFriendNotif</string>
    <string name="notif_channel_desc">BeMyFriend\'s unread messages notifications</string>
    <string name="notif_channel_id">BeMyFriend</string>



    <string name="app_name">BeMyFriend</string>
    <string name="mail">דוא"ל</string>
    <string name="register">הרשמה</string>
    <string name="type_message">הכנס הודעה</string>
    <string name="find_new_friends">מצא חברים חדשים</string>
    <string name="push_to_change">לחץ על התמונה כדי להחליף תמונת פרופיל</string>
    <string name="parent_details">פרטי ההורה</string>
    <string name="parent_name">שם ההורה: </string>
    <string name="city">עיר מגורים: </string>
    <string name="child_details">פרטי הילד/ה: </string>
    <string name="child_name">שם הילד/ה: </string>
    <string name="age">גיל: </string>
    <string name="interest">תחומי עניין: </string>
    <string name="board_games">משחקי קופסא</string>
    <string name="science">מדעים</string>
    <string name="nature">טבע</string>
    <string name="sport">ספורט</string>
    <string name="art">אומנות</string>
    <string name="gaming">משחקי מחשב</string>
    <string name="music">מוזיקה</string>
    <string name="other">אחר</string>
    <string name="male">זכר</string>
    <string name="female">נקבה</string>
    <string name="more_details">עוד על הילד/ה: </string>
    <string name="save">שמור</string>
    <string name="cancel">ביטול</string>
    <string name="enter">כניסה</string>
    <string name="password">סיסמה</string>
    <string name="forgot_password">שכחתי סיסמה</string>
    <string name="no_user">אין משתמש?</string>
    <string name="filter">סינון</string>
    <string name="edit_profile">ערוך פרופיל</string>
    <string name="profile_pic">תמונת פרופיל: </string>
    <string name="gender">מגדר: </string>
    <string name="choose_pic">בחר תמונת פרופיל</string>
    <string name="reset_password">אפס סיסמה</string>
    <string name="back">חזור</string>
    <string name="my_profile">הפרופיל שלי</string>
    <string name="exit">יציאה</string>
    <string name="loading">טוען</string>
    <string name="chats">"צ'אטים"</string>
    <string name="delete_chats">"מחק צ'אט זה"</string>
    <string name="start_new_chats">"התחל צ'אט"</string>
    <string name="chat">"צ'אט"</string>
    <string name="no_available_chats">"אין לך צ'אטים זמינים"</string>
    <string name="have_not_found">לא נמצאו אנשים</string>
    <string name="hello">שלום</string>
    <string name="login_failed">כניסה נכשלה</string>
    <string name="enter_mail">הכנס דוא"ל</string>
    <string name="mail_sent">המייל נשלח</string>
    <string name="mail_does_not_exist">כתובת הדוא"ל אינה קיימת במערכת</string>
    <string name="mail_already_exist">דוא"ל זה כבר קיים במערכת</string>
    <string name="password_must_have_6_chars">הסיסמה צריכה להכיל לפחות 6 תווים</string>
    <string name="enter_parent_name">הכנס/י את שם ההורה</string>
    <string name="enter_city">הכנס/י את עיר המגורים</string>
    <string name="enter_child_name">הכנס/י את שם הילד</string>
    <string name="enter_age">הכנס/י את גיל הילד</string>
    <string name="enter_gender">הכנס/י את מין הילד</string>
    <string name="mail_or_password_wrong_or_already_taken">
        המייל או הסיסמה אינם נכונים או שמייל זה כבר בשימוש</string>
    <string name="male_or_password_empty">המייל או הסיסמה ריקים</string>
</resources>