<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_my_profile"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/menu_chats"
        android:title="@string/chats" />
    <item
        android:id="@+id/menu_find_new_friends"
        android:title="@string/find_new_friends" />
    <item
        android:id="@+id/menu_delete_chat"
        android:title="@string/delete_chats" />
    <item
        android:id="@+id/menu_start_music"
        android:title="הפעל מוזיקה " />
    <item
        android:id="@+id/menu_stop_music"
        android:title="עצור מוזיקה"
        android:visible="false" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/exit" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="חיפוש"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
</menu>