<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background"
    tools:context=".MyProfile">

    <include
        android:id="@+id/mytoolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layoutDirection="rtl"
        app:layout_constraintBottom_toTopOf="@+id/changedetailsbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mytoolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_pic"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView71"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginStart="150dp"
                app:srcCompat="@drawable/profile11" />

            <TextView
                android:id="@+id/textViewParentDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/parent_details"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewParentNamemored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/parent_name"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewMail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mail"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewCitymored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/city"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="77dp"
                android:gravity="center"
                android:text="@string/child_details"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordR" />

            <TextView
                android:id="@+id/textViewChildNamemored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/child_name"
                android:textColor="#000000"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/textViewHobbies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/interest"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewAgemored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/age"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewGendermored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="מין:"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDetailsmored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/more_details"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/changedetailsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="moveToEditProfile"
        android:text="@string/edit_profile"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>