<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".screens.Login">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="268dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_overlay"
        android:drawableStart="@drawable/person_icon"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewlogin" />

    <EditText
        android:id="@+id/editTextpassword"
        android:layout_width="268dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_overlay"
        android:drawableStart="@drawable/lock_icon"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textEnd"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editTextMail"
        app:layout_constraintStart_toStartOf="@+id/editTextMail"
        app:layout_constraintTop_toBottomOf="@+id/editTextMail" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:onClick="login"
        android:text="@string/enter"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gotoregisterbutton"
        app:layout_constraintTop_toBottomOf="@+id/editTextpassword"
        app:layout_constraintVertical_bias="0.77" />


    <Button
        android:id="@+id/gotoregisterbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="moveToRegister"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginbutton"
        app:layout_constraintEnd_toEndOf="@id/loginbutton"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginbutton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/no_user"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/gotoregisterbutton"
        app:layout_constraintEnd_toEndOf="@+id/gotoregisterbutton"
        app:layout_constraintStart_toStartOf="@+id/gotoregisterbutton" />

    <Button
        android:id="@+id/forgotpasswordbutton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="forgotPassword"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextpassword"
        app:layout_constraintStart_toStartOf="@+id/editTextpassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>